--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="서드림 - 프로필 링크">
-    <meta property="og:description" content="어서와 코딩은 처음이지?">
+    <meta property="og:description" content="어서와 K-life는 처음이지?">
     <meta property="og:image" content="꼬부기.png">
     <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script>
     <title>서드림 - 프로필 링크</title>
@@ -83,8 +83,8 @@
     <div class="wrap">
         <div class="profile"></div>
         <h1 class="main">서드림</h1>
-        <p class="sub">코딩.. 좋아하세요?</p>
-        <a target="_blank" href="https://spartacodingclub.kr/">스파르타코딩클럽</a>
+        <p class="sub">한국 좋아하세요?</p>
+        <a target="_blank" href="http://pf.kakao.com/_KxgmGb">뷰티</a>
         <a target="_blank" href="https://hanghae99.spartacodingclub.kr/">항해99</a>
         <a target="_blank" href="https://chang.spartacodingclub.kr/">창업 부트캠프 창</a>
         <a target="_blank" href="https://ddingdong.spartacodingclub.kr/">띵동코딩</a>
