--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta property="og:title" content="서드림 - 프로필 링크">
     <meta property="og:description" content="어서와 K-life는 처음이지?">
     <meta property="og:image" content="꼬부기.png">
-    <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script>
     <title>서드림 - 프로필 링크</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
@@ -85,7 +84,7 @@
         <h1 class="main">서드림</h1>
         <p class="sub">한국 좋아하세요?</p>
         <a target="_blank" href="http://pf.kakao.com/_KxgmGb">뷰티</a>
-        <a target="_blank" href="https://hanghae99.spartacodingclub.kr/">항해99</a>
+        <a target="_blank" href="http://pf.kakao.com/_gIJyb">IT</a>
         <a target="_blank" href="https://chang.spartacodingclub.kr/">창업 부트캠프 창</a>
         <a target="_blank" href="https://ddingdong.spartacodingclub.kr/">띵동코딩</a>
     </div>
