--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <p class="sub">한국 좋아하세요?</p>
         <a target="_blank" href="http://pf.kakao.com/_KxgmGb">뷰티</a>
         <a target="_blank" href="http://pf.kakao.com/_gIJyb">IT</a>
-        <a target="_blank" href="https://chang.spartacodingclub.kr/">창업 부트캠프 창</a>
+        <a target="_blank" href="https://blog.naver.com/lovelygiven">자유로운 영혼</a>
         <a target="_blank" href="https://ddingdong.spartacodingclub.kr/">띵동코딩</a>
     </div>
 </body>
