--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="wrap">
         <div class="profile"></div>
         <h1 class="main">서드림</h1>
-        <p class="sub">한국 좋아하세요?</p>
+        <p class="sub">COVID-19시대에 뭐하며 지내세요?</p>
         <a target="_blank" href="http://pf.kakao.com/_KxgmGb">뷰티</a>
         <a target="_blank" href="http://pf.kakao.com/_gIJyb">IT</a>
         <a target="_blank" href="https://blog.naver.com/lovelygiven">자유로운 영혼</a>
