--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="자안감리교회 - 프로필 링크">
-    <meta property="og:description" content="어서와 K-life는 처음이지?">
+    <meta property="og:description" content="어서와 여름성경학교 오랫만이지?">
     <meta property="og:image" content="꼬부기.png">
     <title>자안감리교회 - 프로필 링크</title>
     <style>
@@ -83,7 +83,7 @@
     <div class="wrap">
         <div class="profile"></div>
         <h1 class="main">자안감리교회 여름성경학교</h1>
-        <p class="sub">COVID-19시대에 뭐하며 지내세요?</p>
+        <p class="sub">코로나로 인해 오랫만에 성경학교?</p>
         <a target="_blank" href="http://pf.kakao.com/_KxgmGb">뷰티</a>
         <a target="_blank" href="http://pf.kakao.com/_gIJyb">IT</a>
         <a target="_blank" href="https://blog.naver.com/lovelygiven">자유로운 영혼</a>
