--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
 	<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="자안감리교회 - 프로필 링크">
-    <meta property="og:description" content="어서와 여름성경학교 오랫만이지?">
+    <meta property="og:title" content="서드림 - 프로필 링크">
+    <meta property="og:description" content="어서와 K-life는 처음이지?">
     <meta property="og:image" content="꼬부기.png">
-    <title>자안감리교회 - 프로필 링크</title>
+    <title>서드림 - 프로필 링크</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
         * {
-    font-family: "Pretendard",serif;
-        }
+            font-family: "Pretendard",serif;
         }
         body {
-            background-color: #39488a;
+            background-color: #44398a;
         }
         .profile{
             width: 100px;
@@ -25,7 +24,7 @@
 
             border: 2px solid white;
 
-            background-image: url('여름성경학교.png');
+            background-image: url('꼬부기.png');
             background-position: center;
             background-size: cover;
         }
@@ -63,7 +62,7 @@
 
             font-size: 14px;
             font-weight: bold;
-            color: #39558a;
+            color: #44398a;
 
             display: flex;
             flex-direction: column;
@@ -82,8 +81,8 @@
 <body>
     <div class="wrap">
         <div class="profile"></div>
-        <h1 class="main">자안감리교회 여름성경학교</h1>
-        <p class="sub">코로나로 인해 오랫만에 성경학교?</p>
+        <h1 class="main">서드림</h1>
+        <p class="sub">COVID-19시대에 뭐하며 지내세요?</p>
         <a target="_blank" href="http://pf.kakao.com/_KxgmGb">뷰티</a>
         <a target="_blank" href="http://pf.kakao.com/_gIJyb">IT</a>
         <a target="_blank" href="https://blog.naver.com/lovelygiven">자유로운 영혼</a>
